# ivappetrova_prog4

./: CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt  Command.h  Component.cpp  Component.h  Controller.h  DeltaTime.h  Event.h  FPSComponent.cpp  FPSComponent.h  Font.h  GameObject.h  GameObjectCommand.h  IObserver.h  ISoundSystem.h  InputManager.cpp  InputManager.h  LoggingSoundSystem.h  Minigin.h  NullSoundSystem.h  Renderer.h  ResourceManager.cpp  ResourceManager.h  RotatorComponent.h  Scene.h  SceneManager.h  ServiceLocator.h  Singleton.h  SoundSystem.cpp  SoundSystem.h  Subject.h  TextComponent.cpp  TextComponent.h  Texture2D.h  TextureComponent.cpp  TextureComponent.h  Transform.h
Game/: CMakeLists.txt  DealDamageCommand.h  HealthComponent.h  LivesDisplayComponent.h  Main.cpp  MoveCommand.h  PickUpCommand.h  PlaySoundCommand.h  Player.cpp  Player.h  PlayerDiedDisplayComponent.h  PlayerPointsComponent.h  PlayerState.h  PlayerStates.h  PointsDisplayComponent.h
Minigin/: Command.h  Component.h  Controller.cpp  DealDamageCommand.h  DeltaTime.h  Event.h  FPSComponent.cpp  FPSComponent.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  GameObjectCommand.h  HealthComponent.h  IObserver.h  ISoundSystem.h  InputManager.cpp  InputManager.h  LivesDisplayComponent.h  LoggingSoundSystem.h  Main.cpp  Minigin.cpp  Minigin.h  MoveCommand.h  NullSoundSystem.h  PlaySoundCommand.h  Renderer.cpp  Renderer.h  RotatorComponent.cpp  RotatorComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ServiceLocator.h  SoundSystem.h  TextComponent.cpp  TextComponent.h  Texture2D.cpp  TextureComponent.cpp  (+3 more)
